# gacfred

./: .gitignore  CMakeLists.txt  Gacfred.sln  Gacfred.vcxproj  Gacfred.vcxproj.filters  Main.cpp  README.md
Lib/: MD5.cpp  MD5.h  util.cpp  util.h  wke.h
Lib/Request/: ChatGPTRequest.cpp  ChatGPTRequest.h  ClipboardRequest.cpp  ClipboardRequest.h
Lib/sqlite_orm/: CopyType.h  WString.h
Model/: Chat.cpp  Chat.h  Copy.cpp  Copy.h  DB.h
UI/: Resource.xml  gen.sh
UI/Program/: ChatGPT.xml  Clipboard.xml
UI/Source/: ChatGPT.cpp  ChatGPT.h  Clipboard.cpp  Clipboard.h  Gacfred.h  GacfredPartialClasses.cpp  GacfredPartialClasses.h  GacfredReflection.cpp  GacfredReflection.h  MainWindow.cpp  MainWindow.h
UI/Template/: BaselineDocument.xml  ChatListItem.xml  CopyListItem.xml  DocumentLabel.xml  List.xml  TransparentButton.xml  Window.xml
ViewModel/: ChatGPTViewModel.cpp  ChatGPTViewModel.h  ClipboardViewModel.cpp  ClipboardViewModel.h  MainWindowViewModel.cpp  MainWindowViewModel.h
